Prevent footer unstacked contents to overflow on mobile viewports

--- a/app-next/components/footer/footer.module.sass
+++ b/app-next/components/footer/footer.module.sass
@@ -4,9 +4,9 @@
 	
 .footer
 	background-color: $elementBackgroundColor
-	// background-image: url("/paper-card.jpg")
 	background-size: cover
 	box-sizing: border-box
+	overflow: hidden
 
 	.inlay
 		@include inlayed
